# mdns-reflector

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  mdns-reflector.spec
debian/: changelog  control  copyright  install  postinst
hack/: build-rpm.sh
misc/: mdns-reflector.service  mdns-reflector@.service
misc/mdns-reflector/: mdns-reflector.conf
misc/mdns-reflector/conf.d/: 00_mdns-reflector
src/: CMakeLists.txt  daemon.c  daemon.h  logging.c  logging.h  main.c  mcast.c  mcast.h  options.h  reflection_zone.c  reflection_zone.h  reflector.c  reflector.h
